content/docs/v2020.10.30/reference/azurerm.kubeform.com/LbNATRule.md
---
title: LbNATRule
menu:
  docs_v2020.10.30:
    identifier: lbnatrule-azurerm.kubeform.com
    name: LbNATRule
    parent: azurerm.kubeform.com-reference
    weight: 1
menu_name: docs_v2020.10.30
section_menu_id: reference
info:
  community: v0.3.0
  installer: v0.3.0
  version: v2020.10.30
---

## LbNATRule
| Field | Type | Description |
| ------ | ----- | ----------- |
| `apiVersion` | string | `azurerm.kubeform.com/v1alpha1` |
|    `kind` | string | `LbNATRule` |
| `metadata` | ***[Kubernetes meta/v1.ObjectMeta](https://v1-18.docs.kubernetes.io/docs/reference/generated/kubernetes-api/v1.18/#objectmeta-v1-meta)***|Refer to the Kubernetes API documentation for the fields of the `metadata` field.|
| `spec` | ***[LbNATRuleSpec](#lbnatrulespec)***||
| `status` | ***[LbNATRuleStatus](#lbnatrulestatus)***||
## LbNATRuleSpec

Appears on:[LbNATRule](#lbnatrule), [LbNATRuleStatus](#lbnatrulestatus)

| Field | Type | Description |
| ------ | ----- | ----------- |
| `providerRef` | ***[Kubernetes core/v1.LocalObjectReference](https://v1-18.docs.kubernetes.io/docs/reference/generated/kubernetes-api/v1.18/#localobjectreference-v1-core)***||
| `id` | ***string***||
| `backendIPConfigurationID` | ***string***| ***(Optional)*** |
| `backendPort` | ***int64***||
| `enableFloatingIP` | ***bool***| ***(Optional)*** |
| `enableTcpReset` | ***bool***| ***(Optional)*** |
| `frontendIPConfigurationID` | ***string***| ***(Optional)*** |
| `frontendIPConfigurationName` | ***string***||
| `frontendPort` | ***int64***||
| `idleTimeoutInMinutes` | ***int64***| ***(Optional)*** |
| `loadbalancerID` | ***string***||
| `location` | ***string***| ***(Optional)*** Deprecated|
| `name` | ***string***||
| `protocol` | ***string***||
| `resourceGroupName` | ***string***||
## LbNATRuleStatus

Appears on:[LbNATRule](#lbnatrule)

| Field | Type | Description |
| ------ | ----- | ----------- |
| `observedGeneration` | ***int64***| ***(Optional)*** Resource generation, which is updated on mutation by the API Server.|
| `output` | ***[LbNATRuleSpec](#lbnatrulespec)***| ***(Optional)*** |
| `state` | ***kubeform.dev/kubeform/apis/base/v1alpha1.State***| ***(Optional)*** |
| `phase` | ***[Phase](#phase)***| ***(Optional)*** |
## Phase(`string` alias)

Appears on:[LbNATRuleStatus](#lbnatrulestatus)

---
